output/aws-codebuild-project-file-system-location/aws-cdk-codebuild-file-system-locations.template.json
{
  "Resources": {
    "MyVPCAFB07A31": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC"
          }
        ]
      }
    },
    "MyVPCPublicSubnet1Subnet0C75866A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPCAFB07A31"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/17",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC/PublicSubnet1"
          }
        ]
      }
    },
    "MyVPCPublicSubnet1RouteTable538A9511": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPCAFB07A31"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC/PublicSubnet1"
          }
        ]
      }
    },
    "MyVPCPublicSubnet1RouteTableAssociation8A950D8E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVPCPublicSubnet1RouteTable538A9511"
        },
        "SubnetId": {
          "Ref": "MyVPCPublicSubnet1Subnet0C75866A"
        }
      }
    },
    "MyVPCPublicSubnet1DefaultRouteAF81AA9B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVPCPublicSubnet1RouteTable538A9511"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyVPCIGW30AB6DD6"
        }
      },
      "DependsOn": [
        "MyVPCVPCGWE6F260E1"
      ]
    },
    "MyVPCPublicSubnet1EIP5EB6147D": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC/PublicSubnet1"
          }
        ]
      }
    },
    "MyVPCPublicSubnet1NATGateway838228A5": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "MyVPCPublicSubnet1Subnet0C75866A"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "MyVPCPublicSubnet1EIP5EB6147D",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC/PublicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "MyVPCPublicSubnet1DefaultRouteAF81AA9B",
        "MyVPCPublicSubnet1RouteTableAssociation8A950D8E"
      ]
    },
    "MyVPCPrivateSubnet1Subnet641543F4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPCAFB07A31"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/17",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC/PrivateSubnet1"
          }
        ]
      }
    },
    "MyVPCPrivateSubnet1RouteTable133BD901": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPCAFB07A31"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC/PrivateSubnet1"
          }
        ]
      }
    },
    "MyVPCPrivateSubnet1RouteTableAssociation85DFBFBB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVPCPrivateSubnet1RouteTable133BD901"
        },
        "SubnetId": {
          "Ref": "MyVPCPrivateSubnet1Subnet641543F4"
        }
      }
    },
    "MyVPCPrivateSubnet1DefaultRouteA8EE6636": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVPCPrivateSubnet1RouteTable133BD901"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "MyVPCPublicSubnet1NATGateway838228A5"
        }
      }
    },
    "MyVPCIGW30AB6DD6": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-codebuild-file-system-locations/MyVPC"
          }
        ]
      }
    },
    "MyVPCVPCGWE6F260E1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPCAFB07A31"
        },
        "InternetGatewayId": {
          "Ref": "MyVPCIGW30AB6DD6"
        }
      }
    },
    "SecurityGroup1F554B36F": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Example",
        "GroupName": "Jane",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "MyVPCAFB07A31"
        }
      }
    },
    "MyProjectRole9BBE5233": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codebuild.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "MyProjectRoleDefaultPolicyB19B7C29": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ec2:CreateNetworkInterfacePermission",
              "Condition": {
                "StringEquals": {
                  "ec2:Subnet": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition"
                          },
                          ":ec2:",
                          {
                            "Ref": "AWS::Region"
                          },
                          ":",
                          {
                            "Ref": "AWS::AccountId"
                          },
                          ":subnet/",
                          {
                            "Ref": "MyVPCPrivateSubnet1Subnet641543F4"
                          }
                        ]
                      ]
                    }
                  ],
                  "ec2:AuthorizedService": "codebuild.amazonaws.com"
                }
              },
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ec2:",
                    {
                      "Ref": "AWS::Region"
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":network-interface/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region"
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId"
                      },
                      ":log-group:/aws/codebuild/",
                      {
                        "Ref": "MyProject39F7B0AE"
                      },
                      ":*"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region"
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId"
                      },
                      ":log-group:/aws/codebuild/",
                      {
                        "Ref": "MyProject39F7B0AE"
                      }
                    ]
                  ]
                }
              ]
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "MyProjectRoleDefaultPolicyB19B7C29",
        "Roles": [
          {
            "Ref": "MyProjectRole9BBE5233"
          }
        ]
      }
    },
    "MyProject39F7B0AE": {
      "Type": "AWS::CodeBuild::Project",
      "Properties": {
        "Artifacts": {
          "Type": "NO_ARTIFACTS"
        },
        "Environment": {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:1.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": true,
          "Type": "LINUX_CONTAINER"
        },
        "ServiceRole": {
          "Fn::GetAtt": [
            "MyProjectRole9BBE5233",
            "Arn"
          ]
        },
        "Source": {
          "BuildSpec": "{\n  \"version\": \"0.2\"\n}",
          "Type": "NO_SOURCE"
        },
        "Cache": {
          "Type": "NO_CACHE"
        },
        "EncryptionKey": "alias/aws/s3",
        "FileSystemLocations": [
          {
            "Identifier": "myidentifier",
            "Location": {
              "Fn::Join": [
                "",
                [
                  "fs-c8d04839.efs.",
                  {
                    "Ref": "AWS::Region"
                  },
                  ".amazonaws.com:/mnt"
                ]
              ]
            },
            "MountOptions": "nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2",
            "MountPoint": "/media",
            "Type": "EFS"
          }
        ],
        "VpcConfig": {
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "SecurityGroup1F554B36F",
                "GroupId"
              ]
            }
          ],
          "Subnets": [
            {
              "Ref": "MyVPCPrivateSubnet1Subnet641543F4"
            }
          ],
          "VpcId": {
            "Ref": "MyVPCAFB07A31"
          }
        }
      },
      "DependsOn": [
        "MyProjectPolicyDocument646EE0F2"
      ]
    },
    "MyProjectPolicyDocument646EE0F2": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ec2:CreateNetworkInterface",
                "ec2:DeleteNetworkInterface",
                "ec2:DescribeDhcpOptions",
                "ec2:DescribeNetworkInterfaces",
                "ec2:DescribeSecurityGroups",
                "ec2:DescribeSubnets",
                "ec2:DescribeVpcs"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "MyProjectPolicyDocument646EE0F2",
        "Roles": [
          {
            "Ref": "MyProjectRole9BBE5233"
          }
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
